--- a/apps/jobs/views/incs/banner.ejs
+++ b/apps/jobs/views/incs/banner.ejs
@@ -1,14 +1,17 @@
 <div class="banner">
 	<div class="head">
-		<a href="#pos_type" data-transition="pop"><img src="/img/jobs/banner02.png" alt=""></a>
-	</div>
-
-	<div class="logo">
 		<a href="#home" data-transition="pop"><img src="/img/jobs/logo.png" alt=""></a>
 	</div>
 
-	<div style="clear: both;"></div>
-	<div class="arrow">
-		<img src="/img/jobs/ico.png" alt="">
+	<div class="head-text">
+		<strong>招聘职位</strong>
 	</div>
+
+	<div class="logo">
+		<a href="#pos_type" data-transition="pop" id="goto_list">
+			<img src="/img/jobs/list-normal.png" alt="">
+		</a>
+	</div>
+
+	<div style="clear: both;"></div>
 </div>
