--- a/apps/jobs/views/incs/home.ejs
+++ b/apps/jobs/views/incs/home.ejs
@@ -1,11 +1,26 @@
 <section data-role="page" class="page-home" id="home">
-	<div class="bg bg-one"></div>
+	<div class="bg" data-cls="bg-one"></div>
+	<div class="link">
+		<a href="#product">
+			<img src="/img/jobs/arrow-down.png" alt="">
+		</a>
+	</div>
 </section>
 
 <section data-role="page" class="page-home" id="product">
-	<div class="bg bg-two"></div>
+	<div class="bg" data-cls="bg-two"></div>
+	<div class="link">
+		<a href="#team">
+			<img src="/img/jobs/arrow-down.png" alt="">
+		</a>
+	</div>
 </section>
 
 <section data-role="page" class="page-home" id="team">
-	<div class="bg bg-three"></div>
+	<div class="bg" data-cls="bg-three"></div>
+	<div class="link">
+		<a href="#pos_type">
+			<img src="/img/jobs/arrow-down.png" alt="">
+		</a>
+	</div>
 </section>
