--- a/apps/jobs/views/incs/position_type.ejs
+++ b/apps/jobs/views/incs/position_type.ejs
@@ -1,5 +1,38 @@
 <section class="pages-position" id="pos_type" data-role="page">
-	<% include ./banner.ejs %>
+	<div class="banner">
+		<div class="head">
+			<a href="#home" data-transition="pop"><img src="/img/jobs/logo.png" alt=""></a>
+		</div>
+
+		<div class="head-text">
+			<strong>招聘职位</strong>
+		</div>
+
+		<div style="clear: both;"></div>
+	</div>
+
+	<div class="job_wrap">
+		<div class="job_title">
+			<h3>市场类</h3>
+		</div>
+		<div class="job_list">
+			<span class="job_box">
+			  <a href="#bm" class="job_box_inner">
+			    商务经理
+			  </a>
+			</span>
+			<span class="job_box">
+			  <a href="#mm" class="job_box_inner">
+			    媒介经理
+			  </a>
+			</span>
+			<span class="job_box">
+			  <a href="#dm" class="job_box_inner">
+			    品牌经理
+			  </a>
+			</span>
+		</div>
+	</div>
 
 	<div class="job_wrap">
 		<div class="job_title">
@@ -31,6 +64,16 @@
 			    前端工程师
 			  </a>
 			</span>
+			<span class="job_box">
+			  <a href="#data_ana" class="job_box_inner">
+			    数据分析师
+			  </a>
+			</span>
+			<span class="job_box">
+			  <a href="#game_ana" class="job_box_inner">
+			    游戏数据分析师
+			  </a>
+			</span>
 		</div>
 	</div>
 
@@ -50,28 +93,22 @@
 			  </a>
 			</span>
 		</div>
-	</div>
 
-	<div class="job_wrap">
-		<div class="job_title">
-			<h3>市场类</h3>
+		<div class="job_wrap">
+			<div class="job_title">
+				<h3>运营类</h3>
+			</div>
+			<div class="job_list">
+				<span class="job_box">
+				  <a href="#pm_op" class="job_box_inner">
+				    产品运营专员
+				  </a>
+				</span>
+				<span class="job_box">
+				  <a href="#sns_op" class="job_box_inner">
+				    社区运营专员
+				  </a>
+				</span>
+			</div>
 		</div>
-		<div class="job_list">
-			<span class="job_box">
-			  <a href="#bm" class="job_box_inner">
-			    商务经理
-			  </a>
-			</span>
-			<span class="job_box">
-			  <a href="#mm" class="job_box_inner">
-			    媒介经理
-			  </a>
-			</span>
-			<span class="job_box">
-			  <a href="#dm" class="job_box_inner">
-			    品牌经理
-			  </a>
-			</span>
-		</div>
-	</div>
 </section>
