--- a/apps/jobs/views/incs/positions.ejs
+++ b/apps/jobs/views/incs/positions.ejs
@@ -35,7 +35,6 @@
 			<ol>
 				<li>负责公司数据仓库公共平台设计开发</li>
 				<li>负责公司海量数据分析及处理</li>
-				<li>负责其它日常需求开发</li>
 			</ol>
 			<strong>职位要求：</strong>
 			<ol>
@@ -129,6 +128,112 @@
 	<% include ./footer.ejs %>
 </section>
 
+<section class="pages-position" id="game_ana" data-role="page">
+	<% include ./banner.ejs %>
+
+	<div class="pos-wrap">
+		<h3 href="#dog">游戏数据分析师</h3>
+		<div>
+			<strong>职位描述：</strong>
+			<ol>
+				<li>挖掘数据分析需求，制定并实施分析方案，并根据数据分析结果为游戏的改进提出合理化建议</li>
+				<li>结合分析结果及对业务需求的深入理解，设计业务指标体系及数据分析产品并驱动研发</li>
+			</ol>
+			<strong>职位要求：</strong>
+			<ol>
+				<li>大学本科或以上学历，数学、统计学、计算机等相关专业优先</li>
+				<li>熟悉数据分析的相关理论，熟练掌握SQL，Linux，对数据库的相关知识（hadoop）有所了解</li>
+				<li>熟练使用R，SAS或其他统计分析工具辅助工作，至少掌握一门脚本语言，如python/ruby/Shell/Awk</li>
+				<li>强逻辑，能批判，高抗压</li>
+				<li>至少2年数据分析相关经验，有游戏数据分析、游戏运营背景者优先</li>
+			</ol>
+		</div>
+	</div>
+	<% include ./footer.ejs %>
+</section>
+
+<section class="pages-position" id="data_ana" data-role="page">
+	<% include ./banner.ejs %>
+
+	<div class="pos-wrap">
+		<h3 href="#dog">数据分析师</h3>
+		<div>
+			<strong>职位描述：</strong>
+			<ol>
+				<li>负责数据产品的算法研究工作 </li>
+				<li>挖掘客户的数据需求，并撰写数据报告 </li>
+				<li>撰写互联网行业数据相关的月报、季报、年报</li>
+			</ol>
+			<strong>职位要求：</strong>
+			<ol>
+				<li>统计学、计算机、应用数学等相关专业本科及以上学历</li>
+				<li>熟练使用SPSS、SAS、R等至少一种统计软件，使用R软件者优先</li>
+				<li>熟练使用数据库，熟练掌握SQL查询语言</li>
+				<li>良好的逻辑思维与表达能力，善于用简单语言表述复杂结论</li>
+				<li>有强烈的进取心，善于团队合作与管理</li>
+				<li>良好的数据敏感度，能从海量数据提炼核心结果</li>
+				<li>至少2年的互联网数据分析相关工作经验</li>
+			</ol>
+		</div>
+	</div>
+	<% include ./footer.ejs %>
+</section>
+
+<section class="pages-position" id="pm_op" data-role="page">
+	<% include ./banner.ejs %>
+
+	<div class="pos-wrap">
+		<h3 href="#dog">产品运营专员</h3>
+		<div>
+			<strong>职位描述：</strong>
+			<ol>
+				<li>在线服务客户，解疑答惑</li>
+				<li>业务支持（包括账号审核、后台操作、邮件沟通等）</li>
+				<li>提取客户需求、产品建议</li>
+				<li>设计、监测产品运营指标，定期分析产品运营数据</li>
+				<li>根据用户反馈提出产品改进建议，跟进并落实</li>
+				<li>参与运营流程设计。</li>
+			</ol>
+			<strong>职位要求：</strong>
+			<ol>
+				<li>大专以上学历，计算机、统计相关专业优先</li>
+				<li>至少一年互联网产品运营相关的经验，游戏运营经验优先</li>
+				<li>超强的服务意识</li>
+				<li>超好的沟通能力</li>
+				<li>超高的学习分析能力</li>
+			</ol>
+		</div>
+	</div>
+	<% include ./footer.ejs %>
+</section>
+
+<section class="pages-position" id="sns_op" data-role="page">
+	<% include ./banner.ejs %>
+
+	<div class="pos-wrap">
+		<h3 href="#dog">社区运营专员</h3>
+		<div>
+			<strong>职位描述：</strong>
+			<ol>
+				<li>制定并完善社区运营计划及各项管理制度</li>
+				<li>寻找和发起相关活动，引导用户参与，提升用户活跃度</li>
+				<li>管理和把控各种投稿质量，筛选有深度、有含义的文章</li>
+			</ol>
+			<strong>职位要求：</strong>
+			<ol>
+				<li>具备互联网用户关系维护和运营相关工作经验</li>
+				<li>具有策划、组织论坛、社区线上、线下活动经验</li>
+				<li>具有较强的策划、沟通、协作能力，出色的执行能力，责任心强</li>
+				<li>具有大型网站、论坛，或全国性论坛版主工作经验者优先</li>
+				<li>有较高的英语读写（翻译）能力</li>
+				<li>有数据分析社区运营、游戏社区运营经验者优先</li>
+				<li>至少1年社区运营经验</li>
+			</ol>
+		</div>
+	</div>
+	<% include ./footer.ejs %>
+</section>
+
 <section class="pages-position" id="pd" data-role="page">
 	<% include ./banner.ejs %>
 
@@ -191,9 +296,12 @@
 		<h3>商务经理</h3>
 		<div>
 			<ul>
-				<li>工作地可选：深圳/杭州/成都/上海/广州</li>
+				<li>工作地可选：北京/成都/上海</li>
 				<li>市场如你——开拓客户市场，维护客户关系</li>
 				<li>朋友如你——喜欢交朋友，喜欢去挑战，善于去沟通，喜欢走四方</li>
+				<li>
+					如果这说的就是你，加入吧，兄弟!做最酷炫的市场先锋！
+				</li>
 			</ul>
 		</div>
 	</div>
@@ -210,6 +318,9 @@
 				<li>工作地可选：深圳/北京</li>
 				<li>市场如你——撰写稿件，维护媒体关系，执行宣传活动</li>
 				<li>朋友如你——能开脑洞能发挥，思维活跃悟性高</li>
+				<li>
+					如果这说的就是你，加入吧，兄弟!做最酷炫的市场先锋！
+				</li>
 			</ul>
 		</div>
 	</div>
@@ -226,6 +337,9 @@
 				<li>工作地：深圳</li>
 				<li>市场如你——策划市场活动方案，执行活动筹备</li>
 				<li>朋友如你——手脚麻利能统筹，善于思考能总结</li>
+				<li>
+					如果这说的就是你，加入吧，兄弟!做最酷炫的市场先锋！
+				</li>
 			</ul>
 		</div>
 	</div>
