--- a/apps/jobs/views/incs/footer.ejs
+++ b/apps/jobs/views/incs/footer.ejs
@@ -1,8 +1,13 @@
-<footer id="tools">
-	<div class="btns">
-		<a class="sell btn ui-btn ui-corner-all" href="#contact" data-rel="dialog" data-transition="flip">我要自荐</a>
-		<a class="share btn ui-btn ui-corner-all" href="javascript:;">推荐给朋友</a>
-	</div>
+<footer>
+	<div style="width: 90%;margin: 0 auto;">
+		<div class="btns">
+			<a class="sell btn ui-btn ui-corner-all" href="#contact" data-rel="dialog" data-transition="flip">我要自荐</a>
+		</div>
 
-	<div class="mask"></div>
+		<div class="btns">
+			<a class="share btn ui-btn ui-corner-all" href="javascript:;">推荐给朋友</a>
+		</div>
+
+		<div class="mask"></div>
+	</div>
 </footer>
