--- a/public/css/jobs.css
+++ b/public/css/jobs.css
@@ -48,27 +48,36 @@ width:90%;
 margin:0 auto;
 }
 
-.pages-position {
-	background:#5b99d6;
-}
-
 .pages-position .banner,.page-item .banner {
-background:#114376;
+background:#435699;
 width:100%;
 margin:0;
-padding:1rem 0 0 0;
+padding:1rem 0;
 }
 
 .head {
 float:left;
-width:40%;
+width:15%;
 margin-left:1rem;
+}
+
+.head-text {
+	float: left;
+	margin-left: 1rem;
+	text-shadow: none;
+}
+
+.head-text strong {
+	font-weight: normal;
+	font-size: 2rem;
+	color: #FFF;
 }
 
 .logo {
 float:right;
-width:20%;
+width:10%;
 margin-right:1rem;
+margin-top: 0.4rem;
 }
 
 footer {
@@ -87,6 +96,7 @@ text-align:center;
 z-index:3;
 position:relative;
 margin:0 auto;
+width: 48%;
 }
 
 footer .btn {
@@ -107,7 +117,7 @@ background-color:#db4453 !important;
 }
 
 .share {
-background-color:#172e56 !important;
+background-color:#289b84 !important;
 }
 
 .mask {
@@ -118,7 +128,7 @@ width:100%;
 height:100%;
 opacity:.8;
 z-index:2;
-background:#5b99d6;
+background:#FFF;
 }
 
 #contact fieldset {
@@ -144,14 +154,14 @@ font-size:1.4rem;
 font-weight:600;
 display:inline-block;
 position:relative;
-color:#FFF;
+color:#1c347e;
 margin: 1rem 0;
 text-shadow: none;
 }
 
 .job_list {
 overflow:hidden;
-border-bottom:1px solid #FFF;
+border-bottom: 1px solid #92a3dd;
 width: 96%;
 margin:0 auto;
 padding-bottom: 12px;
@@ -167,18 +177,19 @@ margin-bottom: 0.6rem;
 }
 
 .job_list .job_box_inner {
-border:0;
+border: 1px solid #92a3dd;
 display:inline-block;
 width:92%;
 color:#114376 !important;
 background-color: #FFF;
+font-size: 0.8rem;
 }
 
 .pos-wrap {
 	width: 90%;
 	margin: 0 auto;
 	margin-bottom: 160px;
-	color:#FFF;
+	color:#1c347e;
 	text-shadow: none;
 }
 
@@ -218,16 +229,36 @@ background-color: #FFF;
 }
 
 #pos_type {
-	background-color: #5b99d6;
-	color: #FFF;
+	color: #1c347e;
 }
 
-.arrow {
+.ui-page {
+	-webkit-backface-visibility: hidden;
+}
+
+
+.pull-left {
+	float: left;
+}
+
+.pull-right {
+	float: right;
+}
+
+.bg img {
+	width: 100%;
+	height: 100%;
+}
+
+.link {
+	position: absolute;
+	height: 20px;
+	bottom: 0;
+	left: 0;
+	right: 0;
 	text-align: center;
-	height: 20px;
 }
 
-.arrow img {
-	width: 31px;
-	height: 20px;
+.link img {
+	width: 24px;
 }
