--- a/public/css/jobs.css
+++ b/public/css/jobs.css
@@ -262,3 +262,24 @@ font-size: 0.8rem;
 .link img {
 	width: 24px;
 }
+
+@-webkit-keyframes shake {
+    0%{
+			bottom: 10px;
+    }
+    100% {
+			bottom: 0;
+    }
+}
+@keyframes shake {
+    0%{
+			bottom: 10px;
+    }
+    100% {
+			bottom: 0;
+    }
+}
+.link {
+  -webkit-animation: shake 1.2s infinite ease;
+  animation: shake 1.2s infinite ease;
+}
