--- a/apps/jobs/views/incs/position_type.ejs
+++ b/apps/jobs/views/incs/position_type.ejs
@@ -1,7 +1,7 @@
 <section class="pages-position" id="pos_type" data-role="page">
 	<div class="banner">
 		<div class="head">
-			<a href="#home" data-transition="pop"><img src="/img/jobs/logo.png" alt=""></a>
+			<a href="/jobs" rel="external"><img src="/img/jobs/logo.png" alt=""></a>
 		</div>
 
 		<div class="head-text">
@@ -64,16 +64,6 @@
 			    前端工程师
 			  </a>
 			</span>
-			<span class="job_box">
-			  <a href="#data_ana" class="job_box_inner">
-			    数据分析师
-			  </a>
-			</span>
-			<span class="job_box">
-			  <a href="#game_ana" class="job_box_inner">
-			    游戏数据分析师
-			  </a>
-			</span>
 		</div>
 	</div>
 
@@ -99,6 +89,16 @@
 				<h3>运营类</h3>
 			</div>
 			<div class="job_list">
+				<span class="job_box">
+				  <a href="#data_ana" class="job_box_inner">
+				    数据分析师
+				  </a>
+				</span>
+				<span class="job_box">
+				  <a href="#game_ana" class="job_box_inner">
+				    游戏数据分析师
+				  </a>
+				</span>
 				<span class="job_box">
 				  <a href="#pm_op" class="job_box_inner">
 				    产品运营专员
