--- a/apps/jobs/views/incs/positions.ejs
+++ b/apps/jobs/views/incs/positions.ejs
@@ -295,14 +295,19 @@
 	<div class="pos-wrap">
 		<h3>商务经理</h3>
 		<div>
-			<ul>
-				<li>工作地可选：北京/成都/上海</li>
-				<li>市场如你——开拓客户市场，维护客户关系</li>
-				<li>朋友如你——喜欢交朋友，喜欢去挑战，善于去沟通，喜欢走四方</li>
-				<li>
-					如果这说的就是你，加入吧，兄弟!做最酷炫的市场先锋！
-				</li>
-			</ul>
+			<strong>职位描述：</strong>
+			<ol>
+				<li>开拓客户市场，落实潜在客户转化</li>
+				<li>维护客户关系，进行产品宣讲</li>
+			</ol>
+			<strong>职位要求：</strong>
+			<ol>
+				<li>有较强的沟通能力，表达能力</li>
+				<li>性格外向开朗，喜欢交朋友</li>
+				<li>悟性强，善于学习，能较快掌握产品信息</li>
+				<li>吃苦耐劳，敢于去挑战，可出差</li>
+				<li>有游戏公司商务经验者优先</li>
+			</ol>
 		</div>
 	</div>
 	<% include ./footer.ejs %>
@@ -314,14 +319,21 @@
 	<div class="pos-wrap">
 		<h3>媒介经理</h3>
 		<div>
-			<ul>
-				<li>工作地可选：深圳/北京</li>
-				<li>市场如你——撰写稿件，维护媒体关系，执行宣传活动</li>
-				<li>朋友如你——能开脑洞能发挥，思维活跃悟性高</li>
-				<li>
-					如果这说的就是你，加入吧，兄弟!做最酷炫的市场先锋！
-				</li>
-			</ul>
+				<strong>职位描述：</strong>
+				<ol>
+					<li>媒体关系拓展及日常沟通维护</li>
+					<li>制定媒体宣传、公关计划，将各类传播素材执行落地</li>
+					<li>撰写产品、行业相关及企业文化稿件</li>
+					<li>媒体资源深度挖掘，洽谈媒体合作</li>
+					<li>PR传播调研，对各合作媒体形成传播监测进行反馈</li>
+				</ol>
+				<strong>职位要求：</strong>
+				<ol>
+					<li>有一定的媒体资源和媒介行业经验</li>
+					<li>优秀的人际交往能力、沟通能力、公关能力</li>
+					<li>有较好的文笔基础，互联网思维较强，熟悉互联网流行语</li>
+					<li>悟性高，对新事物接受快，富有创新能力</li>
+				</ol>
 		</div>
 	</div>
 	<% include ./footer.ejs %>
@@ -333,14 +345,19 @@
 	<div class="pos-wrap">
 		<h3>品牌经理</h3>
 		<div>
-			<ul>
-				<li>工作地：深圳</li>
-				<li>市场如你——策划市场活动方案，执行活动筹备</li>
-				<li>朋友如你——手脚麻利能统筹，善于思考能总结</li>
-				<li>
-					如果这说的就是你，加入吧，兄弟!做最酷炫的市场先锋！
-				</li>
-			</ul>
+				<strong>职位描述：</strong>
+				<ol>
+					<li>市场合作洽谈、各类资源拓展维护</li>
+					<li>策划市场活动方案，统筹市场活动筹备</li>
+					<li>随时掌握市场信息，升级公司市场计划</li>
+				</ol>
+				<strong>职位要求：</strong>
+				<ol>
+					<li>有一定活动策划、统筹经验者优先</li>
+					<li>性格活泼开朗，优秀的外联能力</li>
+					<li>细心，有较强协调、组织能力</li>
+					<li>执行力强，可适应出差</li>
+				</ol>
 		</div>
 	</div>
 	<% include ./footer.ejs %>
