--- a/apps/jobs/views/incs/banner.ejs
+++ b/apps/jobs/views/incs/banner.ejs
@@ -1,6 +1,6 @@
 <div class="banner">
 	<div class="head">
-		<a href="#home" data-transition="pop"><img src="/img/jobs/logo.png" alt=""></a>
+		<a href="/jobs" rel="external"><img src="/img/jobs/logo.png" alt=""></a>
 	</div>
 
 	<div class="head-text">
