--- a/public/css/jobs.css
+++ b/public/css/jobs.css
@@ -28,6 +28,11 @@ width:100%;
 
 .page-home {
 background:#172e56;
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
 }
 
 .page-home .desc {
@@ -208,24 +213,31 @@ font-size: 0.8rem;
 .bg {
 	position: absolute;
 	top: 0;
-	right: 0;
-	bottom: 0;
 	left: 0;
+	width: 100%;
+	height: 100%;
+	display: none;
+	-webkit-transition: all .5s;
+	transition: all .5s;
+	overflow: hidden;
 }
 
-.bg-one {
+.bg-1 {
 	background: url(../img/jobs/page-one.png) no-repeat center;
 	background-size: cover;
+	z-index: 99;
 }
 
-.bg-two {
+.bg-2 {
 	background: url(../img/jobs/page-two.png) no-repeat center;
 	background-size: cover;
+	z-index: 98;
 }
 
-.bg-three {
+.bg-3 {
 	background: url(../img/jobs/page-three.png) no-repeat center;
 	background-size: cover;
+	z-index: 97;
 }
 
 #pos_type {
@@ -234,6 +246,7 @@ font-size: 0.8rem;
 
 .ui-page {
 	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
 }
 
 
@@ -245,76 +258,141 @@ font-size: 0.8rem;
 	float: right;
 }
 
-.bg img {
-	width: 100%;
-	height: 100%;
+#loading {
+width: 100%;
+height: 100%;
+overflow: hidden;
+position: absolute;
+left: 0;
+top: 0;
+color: #fff;
+font-size: 1em;
+text-align: center;
+background: #3c4a7d;
+z-index: 99;
 }
 
-.link {
-	position: absolute;
-	height: 20px;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	text-align: center;
-  -webkit-animation: shake 1.2s infinite ease;
-  animation: shake 1.2s infinite ease;
+.spinner {
+  margin: 0 auto;
+  width: 60px;
+  height: 60px;
+  position: relative;
+  top:40%;
 }
 
-.link a, .link-top a {
-	display: block;
-	width: 6rem;
-	margin: 0 auto;
+.container1 > div, .container2 > div, .container3 > div {
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+
+  border-radius: 100%;
+  position: absolute;
+  -webkit-animation: bouncedelay 1.2s infinite ease-in-out;
+  animation: bouncedelay 1.2s infinite ease-in-out;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
-.link img, .link-top img {
-	width: 33px;
-	height: 19px;
+.spinner .spinner-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
-@-webkit-keyframes shake {
-    0%{
-			bottom: 10px;
-    }
-    100% {
-			bottom: 0;
-    }
+.container2 {
+  -webkit-transform: rotateZ(45deg);
+  transform: rotateZ(45deg);
 }
 
-@keyframes shake {
-    0%{
-			bottom: 10px;
-    }
-    100% {
-			bottom: 0;
-    }
+.container3 {
+  -webkit-transform: rotateZ(90deg);
+  transform: rotateZ(90deg);
 }
 
-.link-top {
-	position: absolute;
-	height: 20px;
-	top: 0;
-	left: 0;
-	right: 0;
-	text-align: center;
-  -webkit-animation: shake-top 1.2s infinite ease;
-  animation: shake-top 1.2s infinite ease;
+.circle1 { top: 0; left: 0; }
+.circle2 { top: 0; right: 0; }
+.circle3 { right: 0; bottom: 0; }
+.circle4 { left: 0; bottom: 0; }
+
+.container2 .circle1 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
 }
 
-@-webkit-keyframes shake-top {
-    0%{
-			top: 10px;
-    }
-    100% {
-			top: 0;
-    }
+.container3 .circle1 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
 }
 
-@keyframes shake-top {
-    0%{
-			top: 10px;
-    }
-    100% {
-			bottom: 0;
-    }
+.container1 .circle2 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+
+.container2 .circle2 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+
+.container3 .circle2 {
+  -webkit-animation-delay: -0.7s;
+  animation-delay: -0.7s;
+}
+
+.container1 .circle3 {
+  -webkit-animation-delay: -0.6s;
+  animation-delay: -0.6s;
+}
+
+.container2 .circle3 {
+  -webkit-animation-delay: -0.5s;
+  animation-delay: -0.5s;
+}
+
+.container3 .circle3 {
+  -webkit-animation-delay: -0.4s;
+  animation-delay: -0.4s;
+}
+
+.container1 .circle4 {
+  -webkit-animation-delay: -0.3s;
+  animation-delay: -0.3s;
+}
+
+.container2 .circle4 {
+  -webkit-animation-delay: -0.2s;
+  animation-delay: -0.2s;
+}
+
+.container3 .circle4 {
+  -webkit-animation-delay: -0.1s;
+  animation-delay: -0.1s;
+}
+
+@-webkit-keyframes bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0.0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes bouncedelay {
+  0%, 80%, 100% {
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 40% {
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
+}
+
+#view_pos_type {
+	background-color: #FFF;
+	border: 0;
+	color: #d45a00;
+	position: fixed;
+	bottom: 1rem;
+	width: 50%;
+	padding: .7rem 0;
+	margin-left: 25%;
+	display: none;
+	z-index: 30;
 }
