--- a/apps/jobs/views/incs/position_type.ejs
+++ b/apps/jobs/views/incs/position_type.ejs
@@ -64,6 +64,11 @@
 			    前端工程师
 			  </a>
 			</span>
+			<span class="job_box">
+			  <a href="#it" class="job_box_inner">
+			    WEB工程师
+			  </a>
+			</span>
 		</div>
 	</div>
 
