--- a/apps/jobs/views/incs/positions.ejs
+++ b/apps/jobs/views/incs/positions.ejs
@@ -25,6 +25,31 @@
 	<% include ./footer.ejs %>
 </section>
 
+<section class="pages-position" id="it" data-role="page">
+	<% include ./banner.ejs %>
+
+	<div class="pos-wrap">
+		<h3>WEB工程师</h3>
+		<div>
+			<strong>职位描述：</strong>
+			<ol>
+				<li>负责公司内部IT支撑平台的Web系统研发</li>
+			</ol>
+			<strong>职位要求：</strong>
+			<ol>
+				<li>2年以上WEB开发工作经验</li>
+				<li>熟悉html/js/css等开发，熟练使用jQuery，Bootstrap等框架</li>
+				<li>了解Ajax以及HTTP相关基础知识</li>
+				<li>熟悉Java WEB开发常用框架，如SpringMVC/Spring等，了解其他编程语言如PHP、Python等加分</li>
+				<li>熟练使用Mysql和Linux</li>
+				<li>能吃苦耐劳，有较强的沟通和执行能力</li>
+			</ol>
+		</div>
+	</div>
+
+	<% include ./footer.ejs %>
+</section>
+
 <section class="pages-position" id="hadoop" data-role="page">
 	<% include ./banner.ejs %>
 
