fix xiaomi's bug

--- a/apps/jobs/views/incs/contact.ejs
+++ b/apps/jobs/views/incs/contact.ejs
@@ -1,7 +1,7 @@
-<section data-role="dialog" id="contact">
-	<div data-role="header">
-		<h1>填写联系方式</h1>
-	</div>
+<section data-role="page" class="pages-position" id="contact">
+	<% include ./banner.ejs %>
+
+	<h3>填写联系方式</h3>
 	<form method="post" id="form1">
 		<fieldset>
 			<label>应聘岗位</label>
