--- a/apps/jobs/views/incs/positions.ejs
+++ b/apps/jobs/views/incs/positions.ejs
@@ -322,8 +322,11 @@
 		<div>
 			<strong>职位描述：</strong>
 			<ol>
-				<li>开拓客户市场，落实潜在客户转化</li>
-				<li>维护客户关系，进行产品宣讲</li>
+				<li>工作地可选：北京/成都/上海</li>
+				<li>制定商务拓展计划，并跟进落实</li>
+				<li>开拓客户市场，促进潜在客户转化</li>
+				<li>维护客户日常关系，进行产品宣讲</li>
+				<li>及时把握市场动态，了解市场需求</li>
 			</ol>
 			<strong>职位要求：</strong>
 			<ol>
@@ -346,6 +349,7 @@
 		<div>
 				<strong>职位描述：</strong>
 				<ol>
+					<li>工作地可选：深圳/北京</li>
 					<li>媒体关系拓展及日常沟通维护</li>
 					<li>制定媒体宣传、公关计划，将各类传播素材执行落地</li>
 					<li>撰写产品、行业相关及企业文化稿件</li>
@@ -372,6 +376,7 @@
 		<div>
 				<strong>职位描述：</strong>
 				<ol>
+					<li>工作地：北京</li>
 					<li>市场合作洽谈、各类资源拓展维护</li>
 					<li>策划市场活动方案，统筹市场活动筹备</li>
 					<li>随时掌握市场信息，升级公司市场计划</li>
