--- a/apps/jobs/views/incs/footer.ejs
+++ b/apps/jobs/views/incs/footer.ejs
@@ -1,7 +1,7 @@
 <footer>
 	<div style="width: 90%;margin: 0 auto;">
 		<div class="btns">
-			<a class="sell btn ui-btn ui-corner-all" href="#contact" data-rel="dialog" data-transition="flip">我要自荐</a>
+			<a class="sell btn ui-btn ui-corner-all" href="#contact">我要自荐</a>
 		</div>
 
 		<div class="btns">
