--- a/public/css/jobs.css
+++ b/public/css/jobs.css
@@ -153,6 +153,7 @@ padding:1rem;
 #btn_send {
 background:#2196f3;
 color:#FFF;
+text-shadow: none;
 }
 
 .job_wrap {
@@ -164,7 +165,7 @@ text-align:center;
 margin-bottom:0.5rem;
 }
 
-.job_title h3 {
+.job_title h3, #contact h3 {
 font-size:1.4rem;
 font-weight:600;
 display:inline-block;
@@ -221,14 +222,17 @@ font-size: 0.8rem;
 }
 
 .bg {
+	width: 100%;
+	/*-webkit-transition: all .5s;*/
+	overflow: hidden;
+	position: relative;
+}
+
+.bg-wrapper {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
-	display: none;
-	-webkit-transition: all .5s;
-	transition: all .5s;
 	overflow: hidden;
 }
 
@@ -248,6 +252,19 @@ font-size: 0.8rem;
 	background: url(../img/jobs/page-three.png) no-repeat center;
 	background-size: cover;
 	z-index: 97;
+}
+
+.ad {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	text-align: center;
+	height: 20px;
+}
+
+.ad img {
+	width: 33px;
 }
 
 #pos_type {
@@ -396,7 +413,7 @@ z-index: 99;
 
 #view_pos_type {
 	display: block;
-	position: relative;
+	position: absolute;
 	text-align: center;
 	text-overflow: ellipsis;
 	overflow: hidden;
@@ -409,15 +426,23 @@ z-index: 99;
 	background-color: #FFF;
 	border: 0;
 	color: #d45a00;
-	position: fixed;
 	bottom: 1rem;
 	width: 50%;
 	padding: .7rem 0;
 	margin-left: 25%;
-	display: none;
-	z-index: 30;
+	z-index: 99;
 	font-size: 16px;
 	border-radius: 5px;
 	font-weight: bold;
 	text-decoration: none;
 }
+
+#contact h3 {
+	text-align: center;
+	display: block;
+}
+
+#contact form, #contact .form-control {
+	color: #114376;
+}
+
